<resources>
    <string name="app_name">Pranala</string>
    <string name="get_started">Get Started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_apps">Test Apps</string>
    <string name="bilangan_prima">Bilangan Prima</string>
    <string name="bilangan_prima_description">Masukkan angka untuk menghasilkan bilangan prima</string>
    <string name="input_angka">Input Angka</string>
    <string name="masukkan_angka">Masukkan Angka</string>
    <string name="generate_bilangan_prima">Generate Bilangan Prima</string>
    <string name="field_should_filled">Field harus diisi</string>
    <string name="let_s_meet_our_summer_coffe_drinks">Let\'s meet our summer\ncoffe drinks</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="introduction">Introduction</string>
    <string name="confirmation">Confirmation</string>
    <string name="next">Next</string>
    <string name="start_it">Start It!</string>
</resources>