<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".prima_number.PrimaCheckerActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_cup"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_apps"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bilangan_prima"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bilangan_prima_description"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_angka"
        android:textSize="14sp"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"/>

    <EditText
        android:id="@+id/input_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_angka"
        android:textSize="16sp"
        android:inputType="numberSigned" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/generate_prima_number_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:paddingVertical="16dp"
        android:paddingHorizontal="24dp"
        android:background="@drawable/btn_common"
        android:textColor="@color/white"
        android:text="@string/generate_bilangan_prima"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/text_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem/random"/>

    </ScrollView>

</LinearLayout>