<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".starting.PreviewFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="46dp"
        android:layout_marginHorizontal="56dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/img_green_cup"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/let_s_meet_our_summer_coffe_drinks"
        android:textAlignment="center"
        android:layout_marginTop="36sp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/black"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum"
        android:maxLines="3"
        android:textAlignment="center"
        android:ellipsize="end"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="16dp"/>

</LinearLayout>